fix hamburger-menu z-index

--- a/app/styles/_sidebar.sass
+++ b/app/styles/_sidebar.sass
@@ -7,6 +7,8 @@
 #hamburger-menu
   text-shadow: none
   margin: 10px 0 0 10px
+  position: absolute
+  z-index: 3
 
 #menu
   background-color: #1D1F20
